--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
   <main>
     
 <section class="hero">
-  <h2 style="margin:0 0 8px 0">Бумага и бумажная продукция</h2>
+  <h2 style="margin:0 0 8px 0">Категории</h2>
   <div class="grid-products">
-    <article class="card"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=SvetoCopy"/><div class="title">A4 SvetoCopy, 500 л.</div><div class="price">2 590 тг</div><button>Добавить в корзину</button></article>
-    <article class="card"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Snow"/><div class="title">A4 Снегурочка</div><div class="price">2 690 тг</div><button>Добавить в корзину</button></article>
-    <article class="card"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Ballet"/><div class="title">A4 Ballet Brilliant</div><div class="price">2 990 тг</div><button>Добавить в корзину</button></article>
-    <article class="card"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=ABG-PRINT"/><div class="title">A4 ABG-PRINT</div><div class="price">2 190 тг</div><button>Добавить в корзину</button></article>
+    <a class="card" href="/category.html?cat=paper"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Paper"/><div class="title">Бумага и бумажная продукция</div></a>
+    <a class="card" href="/category.html?cat=stationery"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Stationery"/><div class="title">Канцелярские товары</div></a>
+    <a class="card" href="/category.html?cat=household"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Household"/><div class="title">Хозяйственные товары</div></a>
+    <a class="card" href="/category.html?cat=food"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Food"/><div class="title">Продукты питания</div></a>
+    <a class="card" href="/category.html?cat=tech"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Tech"/><div class="title">Техника и электроника</div></a>
+    <a class="card" href="/category.html?cat=toner"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Toner"/><div class="title">Картриджи и тонер</div></a>
+    <a class="card" href="/category.html?cat=furniture"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Furniture"/><div class="title">Мебель и интерьер</div></a>
+    <a class="card" href="/category.html?cat=gifts"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Gifts"/><div class="title">Подарки и сувиниры</div></a>
+    <a class="card" href="/category.html?cat=creative"><img src="https://dummyimage.com/600x400/ffffff/000000.png&text=Creative"/><div class="title">Товары для творчества и учебы</div></a>
   </div>
 </section>
 
