--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -1,16 +1,70 @@
-<!doctype html><html lang="ru"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Админ (демо)</title>
-<link rel="stylesheet" href="/assets/css/styles.css"/><script defer src="/assets/js/include.js"></script>
-</head><body>
-<div data-include="sidebar"></div>
-<div class="page-wrap">
-  <div data-include="header"></div>
-  <main>
-    
-<section class="hero"><h2>Админ-панель (демо)</h2><p>Позже подключим управление товарами.</p></section>
-
-  </main>
-  <div data-include="footer"></div>
-</div>
-</body></html>
+diff --git a/admin/dashboard.html b/admin/dashboard.html
+index 5fc544b847519c3569994979fd0451a1ce56965d..a072d639cb7ff45d6be765938717d567bd855dce 100644
+--- a/admin/dashboard.html
++++ b/admin/dashboard.html
+@@ -1,16 +1,60 @@
+ <!doctype html><html lang="ru"><head>
+ <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+-<title>Админ (демо)</title>
+-<link rel="stylesheet" href="/assets/css/styles.css"/><script defer src="/assets/js/include.js"></script>
++<title>Админ</title>
++<link rel="stylesheet" href="/assets/css/styles.css"/>
++<script defer src="/assets/js/include.js"></script>
+ </head><body>
+ <div data-include="sidebar"></div>
+ <div class="page-wrap">
+   <div data-include="header"></div>
+   <main>
+-    
+-<section class="hero"><h2>Админ-панель (демо)</h2><p>Позже подключим управление товарами.</p></section>
++
++<section class="hero">
++  <h2>Управление товарами</h2>
++  <form id="add-form" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:10px;margin-bottom:20px">
++    <select name="cat" required>
++      <option value="paper">Бумага</option>
++      <option value="stationery">Канцелярия</option>
++      <option value="household">Хозяйственные</option>
++      <option value="food">Продукты</option>
++      <option value="tech">Техника</option>
++      <option value="toner">Тонер</option>
++      <option value="furniture">Мебель</option>
++      <option value="gifts">Подарки</option>
++      <option value="creative">Творчество</option>
++    </select>
++    <input name="sku" placeholder="Артикул" required/>
++    <input name="name" placeholder="Название" required/>
++    <input name="img" placeholder="URL фото" required/>
++    <input name="stock" type="number" placeholder="Количество" required/>
++    <input name="short" placeholder="Кратко" required/>
++    <input name="desc" placeholder="Описание" required/>
++    <button type="submit">Добавить</button>
++  </form>
++
++  <input id="search" placeholder="Поиск" style="margin-bottom:10px;width:100%;max-width:300px"/>
++  <table id="prod-table" style="width:100%;border-collapse:collapse">
++    <thead><tr><th>Артикул</th><th>Название</th><th>Кол-во</th><th>Действия</th></tr></thead>
++    <tbody></tbody>
++  </table>
++</section>
++
++<section class="hero">
++  <h2>Пользователи</h2>
++  <table id="users-table" style="width:100%;border-collapse:collapse">
++    <thead><tr><th>Логин</th><th>Действие</th></tr></thead>
++    <tbody></tbody>
++  </table>
++</section>
++
++<section class="hero">
++  <h2>Заказы</h2>
++  <ul id="orders-list"></ul>
++</section>
+ 
+   </main>
+   <div data-include="footer"></div>
+ </div>
+-</body></html>
++<script src="/assets/js/products.js"></script>
++<script src="/assets/js/admin.js"></script>
++</body></html>
