--- a/category.html
+++ b/category.html
@@ -20,6 +20,7 @@
     <h3 class="modal-title"></h3>
     <p>Артикул: <span class="modal-sku"></span></p>
     <p>На складе: <span class="modal-stock"></span></p>
+    <p>Цена: <span class="modal-price"></span> тг</p>
     <p class="modal-short"></p>
     <p class="modal-desc"></p>
     <div style="display:flex;gap:10px;align-items:center;margin-top:10px">
