рабочий админ панель

--- a/admin/login.html
+++ b/admin/login.html
@@ -35,4 +35,6 @@ document.addEventListener('DOMContentLoaded',()=>{
   </main>
   <div data-include="footer"></div>
 </div>
+<script src="/assets/js/products.js"></script>
+<script src="/assets/js/cart.js"></script>
 </body></html>
