--- a/index.html
+++ b/index.html
@@ -26,4 +26,6 @@
   </main>
   <div data-include="footer"></div>
 </div>
+<script src="/assets/js/products.js"></script>
+<script src="/assets/js/cart.js"></script>
 </body></html>
